tests/baselines/reference/YieldExpression10_es6.errors.txt
error TS2318: Cannot find global type 'IterableIterator'.
tests/cases/conformance/es6/yieldExpressions/YieldExpression10_es6.ts(2,11): error TS2304: Cannot find name 'foo'.


!!! error TS2318: Cannot find global type 'IterableIterator'.
==== tests/cases/conformance/es6/yieldExpressions/YieldExpression10_es6.ts (1 errors) ====
    var v = { * foo() {
        yield(foo);
              ~~~
!!! error TS2304: Cannot find name 'foo'.
      }
    }
    